tests/toylang/neg/001613_mutation.toylang
program a = { while a do 0 sleep; } .
